add initial adc for encoder/current sensing
- not working, just experimenting
- considered a pure experimental branch

--- a/platform/c2000/inverter_drivers/CMakeLists.txt
+++ b/platform/c2000/inverter_drivers/CMakeLists.txt
@@ -1,7 +1,10 @@
 add_library(inverter_drivers 
+    adcdriver.cpp
     eeprom.cpp 
     current.cpp 
+    currentvoltagedriver.cpp 
     encoder.cpp 
+    encoderdriver.cpp
     pmicspidriver.cpp 
     pwmdriver.cpp 
     gatedriver.cpp 
