add a break switch driver skelleton

--- a/platform/c2000/inverter_drivers/CMakeLists.txt
+++ b/platform/c2000/inverter_drivers/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(inverter_drivers 
     adcdriver.cpp
+    breakswitchdriver.cpp
     eeprom.cpp 
     current.cpp 
     currentvoltagedriver.cpp 
